# hci2024

./: .gitignore  main.py  main_audio.py  pyproject.toml  recorder.py  recorder_hsr.py  requirements.txt  setup.bash  speech_interpreter.py  speech_recognizer.py  take_a_photo.py  vad.py  vis_test.py
YOLO/: yolo.py
action/: action.py  test_modules.py
vision/: my_typing.py  mymediapipe.py  typing.py  vis_test.py  vision.py  yolo.py
