[tool.poetry]
name = "hci-project"
version = "0.1.0"
description = ""
authors = ["takemotoooo-eeic <takemoto-kengo2262@g.ecc.u-tokyo.ac.jp>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
torch = {url = "https://download.pytorch.org/hl/cpu/torch-2.0.0-cp310-none-macosx_10_9_x86_64.whl"}
openai = "^1.35.10"
google-generativeai = "^0.7.1"
pyaudio = "^0.2.14"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
